PurposeSection: add stepper. ConclusionSection: add invisible_ref to avoid rendering issues in iphones. Index: adjust path to thumbnail images with deployment url

--- a/src/components/conclusionSection/conclusionSection.module.css
+++ b/src/components/conclusionSection/conclusionSection.module.css
@@ -34,10 +34,17 @@
 }
 
 .article {
+	position: relative;
 	width: 100%;
 	height: 100%;
 	scroll-snap-align: center;
 	scroll-snap-stop: always;
+}
+
+.invisible_ref {
+	position: absolute;
+	top: 50%;
+	left: 50%;
 }
 
 .frame {
@@ -97,13 +104,13 @@
 	width: fit-content;
 	margin: 0 auto;
 	display: flex;
-	gap: calc(var(--sz-xs) * 2);
+	gap: calc(var(--sz-xs) * 2.75);
 }
 
 .step {
 	background-color: var(--font-color);
 	aspect-ratio: 1;
-	width: calc(var(--sz-xs) / 1.5);
+	width: calc(var(--sz-xs) / 1.75);
 	display: grid;
 	place-content: center;
 	border-radius: 50%;
