--- a/src/components/purposeSection/purposeSection.module.css
+++ b/src/components/purposeSection/purposeSection.module.css
@@ -37,16 +37,16 @@
 	top: 0;
 	z-index: 1;
 	width: 100%;
-	height: 45%;
+	height: 40%;
 	background-color: var(--skeleton-clr);
 }
 
 .filter {
 	position: absolute;
-	top: calc(45% - 45% / 4);
+	top: calc(40% - 40% / 4);
 	z-index: 3;
 	width: 100%;
-	height: calc(45% / 2);
+	height: calc(40% / 2);
 	background: linear-gradient(
 		0deg,
 		transparent 0%,
@@ -68,7 +68,7 @@
 .card {
 	position: relative;
 	width: 100%;
-	height: 55%;
+	height: 60%;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -83,8 +83,8 @@
 }
 
 .card_txt_wrapper {
-	width: 90%;
-	height: 55%;
+	width: 85%;
+	height: 60%;
 	display: grid;
 	align-content: center;
 	justify-items: center;
@@ -105,6 +105,34 @@
 	font-size: var(--sz-1);
 	line-height: 1.4;
 	text-align: center;
+}
+
+.stepper {
+	position: absolute;
+	bottom: 3.5%;
+	left: 5%;
+	width: fit-content;
+	display: grid;
+	gap: calc(var(--sz-xs) * 1.75);
+}
+
+.step {
+	background-color: var(--font-color);
+	aspect-ratio: 1;
+	width: calc(var(--sz-xs) / 1.75);
+	display: grid;
+	place-content: center;
+	border-radius: 50%;
+}
+
+.bright {
+	opacity: 1;
+	transition: all 100ms ease-out;
+}
+
+.opaque {
+	opacity: 0.5;
+	transition: all 100ms ease-out;
 }
 
 @media screen and (orientation: landscape) {
@@ -173,6 +201,10 @@
 	.card_txt {
 		width: min(100%, 800px);
 		font-size: var(--sz-0);
+	}
+
+	.stepper {
+		display: none;
 	}
 
 	@media screen and (width >= 1024px) {
